sanitise the frontend, add rosepine theme, add material ui css, remove bootstrap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -106,4 +106,4 @@ body {
   color: #6c757d;
   font-size: 1em;
   padding: 10px 0 10px 0;
-}
+} */
